# DNFNet_release

./: .gitignore  README.md  log_tmp.txt  mmdet.yaml  test.ipynb
configs/cgps/: cuhk.py  prw.py
configs/cpcl/: cuhk.py  prw.py
configs/cpcl_dicl/: prw.py
configs/cpcl_old/: cuhk.py  prw.py
configs/dicl/: prw_dicl.py
configs/dnfnet/: cuhk.py  prw.py
configs/dnfnet2/: cuhk.py  prw.py
configs/dnfnet2_cluster/: prw.py
configs/dnfnet2_dicl/: prw.py
configs/dnfnet2_nopart/: cuhk.py  prw.py
configs/dnfnet_cpcl/: cuhk.py  prw.py
configs/dnfnet_siamese/: prw.py
configs/dnfnet_siamese_deformable/: cuhk.py  prw.py
jobs/cuhk_oimnetpp/: train.sh
jobs/cuhk_sota/: result19.txt  result24.txt  result25.txt  result26.txt  test.sh  train.sh
jobs/prw_baseline/: log_tmp.txt  train.sh
jobs/prw_lr/: test.sh  train.sh
jobs/prw_no_context_iou/: train.sh
jobs/prw_oimnetpp2/: train.sh
jobs/prw_scene_combined/: train.sh
jobs/prw_scene_image/: train.sh
jobs/prw_scene_image_lambda_scene_0p05/: train.sh
jobs/prw_scene_separate/: train.sh
jobs/prw_sota/: log_tmp.txt  result.txt  test.sh  train.sh
jobs/prw_sota2/: test.sh  train.sh
jobs/prw_test/: test.sh  train.sh
max_search_cuda/: CMakeLists.txt  max_search_cuda.cu  test.py
min_search_cuda/: CMakeLists.txt  min_search_cuda.cu  test.py
mmdet/: __init__.py  version.py
mmdet/apis/: __init__.py  test.py  train.py
mmdet/core/: __init__.py
mmdet/datasets/: cuhk_sysu_unsup.py  custom.py
tools/: dist_test.sh  test.py  test_personsearch.py  test_results_prw.py  test_results_prw_part.py
(+306 files in other folders)
